deployment/stacks/application/base/template/service-search/service-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: uec-sfs
  name: service-search
spec:
  replicas: SERVICE_SEARCH_REPLICAS_TO_REPLACE
  selector:
    matchLabels:
      app: service-search
      env: PROFILE_TO_REPLACE
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # how many pods we can add at a time
      maxUnavailable: 0  # maxUnavailable define how many pods can be unavailable during the rolling update
  template:
    metadata:
      labels:
        app: service-search
    spec:
      serviceAccountName: uec-dos-api-sfsa-service-account
      serviceAccount: uec-dos-api-sfsa-service-account
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - service-search
                topologyKey: kubernetes.io/hostname
      containers:
      - name: service-search
        image: DOCKER_REGISTRY_TO_REPLACE/api:API_IMAGE_TAG_TO_REPLACE
        securityContext:
          runAsUser: 0
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 120
          failureThreshold: 3
          periodSeconds: 5
        ports:
        - containerPort: 8443
          protocol: TCP
        resources:
          requests:
            memory: "0Mi"
            cpu: "0m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        imagePullPolicy: Always
