deployment/stacks/application/base/template/service-search/service-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-sf-sfs-service
  namespace: uec-sf-sfs
  labels:
    app: service-search
spec:
  type: ClusterIP
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  selector:
    app: service-search
